매인 팝업 추가, 컨텐츠 텍스트 추가

--- a/gallery.html
+++ b/gallery.html
@@ -56,8 +56,7 @@
       <div class="text_con">
         <div class="text_box">
           <h2>Nudie Jeans Gallery</h2>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid tempora nam inventore nesciunt, sequi
-            porro obcaecati sed accusamus rerum voluptas!</p>
+          <p>Our Re-use concept is pretty straightforward: handed-in Nudie Jeans, washed, repaired and sold again as second-hand. Not only is this a great way to do the planet a favor, you’ll also take the short cut to a unique garment that tells a story. These sell out fast, so if you miss your chance, you can always</p>
         </div>
         <i></i>
       </div>
@@ -75,22 +74,17 @@
           </div>
           <div class="right">
             <div class="text_box">
-              <h2>Lorem, ipsum. <i class="mask_bg"></i></h2>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis possimus ea aliquid doloremque
-                veritatis reiciendis ipsum sequi, minus consequuntur? Voluptatum fugiat laborum dolore nisi nihil. Culpa
-                veritatis fugiat dolorum possimus.<i class="mask_bg"></i></p>
-              <span>Lorem, ipsum dolor. <i class="mask_bg"></i></span>
+              <h2>Re-use – Next drop: June <i class="mask_bg"></i></h2>
+              <p>Our Re-use concept is pretty straightforward: handed-in Nudie Jeans, washed, repaired and sold again as second-hand. Not only is this a great way to do the planet a favor, you’ll also take the short cut to a unique garment that tells a story. These sell out fast, so if you miss your chance, you can always start your own break-in journey.<i class="mask_bg"></i></p>
+              <span>start your own break-in journey.<i class="mask_bg"></i></span>
             </div>
           </div>
         </div>
         <div class="con">
           <div class="left">
             <div class="text_box">
-              <h2>Lorem, ipsum.<i class="mask_bg"></i></h2>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis possimus ea aliquid doloremque
-                veritatis reiciendis ipsum sequi, minus consequuntur? Voluptatum fugiat laborum dolore nisi nihil. Culpa
-                veritatis fugiat dolorum possimus.<i class="mask_bg"></i></p>
-              <span>Lorem, ipsum dolor.<i class="mask_bg"></i></span>
+              <h2>Rebirth<i class="mask_bg"></i></h2>
+              <p>We make all garments in our Rebirth collection with at least 70% recycled fibers– because why throw away or waste material we can turn into new products? Over the years, we've launched a few bits and pieces and called it Rebirth, but starting today, Rebirth is a recurring concept.<i class="mask_bg"></i></p>
             </div>
           </div>
           <div class="right">
