--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nudie Jeans</title>
-  <script src="https://kit.fontawesome.com/16312fa746.js" crossorigin="anonymous"></script>
 
   <!-- swiper -->
   <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
@@ -16,6 +15,9 @@
   <link rel="stylesheet" href="css/style.css">
 
   <!-- js -->
+  <script src="https://kit.fontawesome.com/16312fa746.js" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
   <script src="js/anime.js"></script>
   <script src="js/main.js" defer></script>
 
@@ -72,16 +74,20 @@
           <li class=" swiper-slide con1">
             <div class="text_box">
               <span> Bake Your Own <i class="mask_bg"></i></span>
-              <h2>New Fit! <br><strong>Rad Rufus</strong> Baked by local denim dealers Strictly limited 25 pairs<i class="mask_bg"></i></h2>
-              <p>Ten stores, ten unique versions of our new fit, Rad Rufus, limited to 25 pieces per store.<i class="mask_bg"></i></p>
+              <h2>New Fit! <br><strong>Rad Rufus</strong> Baked by local denim dealers Strictly limited 25 pairs<i
+                  class="mask_bg"></i></h2>
+              <p>Ten stores, ten unique versions of our new fit, Rad Rufus, limited to 25 pieces per store.<i
+                  class="mask_bg"></i></p>
             </div>
           </li>
           <li class=" swiper-slide con2">
             <div class="text_box">
               <span>Every pair of Nudie Jeans<i class="mask_bg"></i></span>
               <h2>Free repairs Forever.<i class="mask_bg"></i></h2>
-              <p> comes with a promise of free repairs. And that promise is forever, no matter when, where, or how you got
-                them. Buying a pair of premium jeans is an investment, and since we provide the jeans, it’s only right we
+              <p> comes with a promise of free repairs. And that promise is forever, no matter when, where, or how you
+                got
+                them. Buying a pair of premium jeans is an investment, and since we provide the jeans, it’s only right
+                we
                 take
                 care of the repairs.<i class="mask_bg"></i></p>
             </div>
@@ -91,7 +97,8 @@
               <span>No one is an island entirely on their own<i class="mask_bg"></i></span>
               <h2>Island Life<i class="mask_bg"></i></h2>
               <p>is whatever you make of it: a place for recreation or adventure. Pitch your tent wherever you please,
-                accidentally spot a UFO when you’re out birding, hit the beach to catch up on your reading, or why not go
+                accidentally spot a UFO when you’re out birding, hit the beach to catch up on your reading, or why not
+                go
                 for
                 a swim.<i class="mask_bg"></i></p>
             </div>
@@ -108,13 +115,13 @@
           <li>
             <a href="#">
               <div class="pic">
-                <img src="./img/main/new01.jpg" alt="">
+                <img src="./img/main/new01.jpg" alt="men arrivals image">
                 <i class="mask_bg"></i>
               </div>
               <div class="text_box">
-                <h2>Lorem, ipsum dolor.</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, aut.</p>
-                <span>Lorem, ipsum.</span>
+                <h2>Men's new arrivals</h2>
+                <p>The title says it all, you're looking at what's new! Constantly evolving, "New Arrivals" brings you all the latest releases from Nudie Jeans.</p>
+                <span>become a c/o Nudie Jeans member!</span>
               </div>
             </a>
           </li>
@@ -125,9 +132,9 @@
                 <i class="mask_bg"></i>
               </div>
               <div class="text_box">
-                <h2>Lorem, ipsum dolor.</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, aut.</p>
-                <span>Lorem, ipsum.</span>
+                <h2>Women's new arrivals</h2>
+                <p>Our latest collection from Nudie Jeans Women is more of the things we love! So, if you’re like us and just can’t get enough of beautiful denim washes, workwear that ages with grace and comfy tees, then you’re in for a treat.</p>
+                <span>become a c/o Nudie Jeans member!</span>
               </div>
             </a>
           </li>
@@ -138,9 +145,9 @@
                 <i class="mask_bg"></i>
               </div>
               <div class="text_box">
-                <h2>Lorem, ipsum dolor.</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, aut.</p>
-                <span>Lorem, ipsum.</span>
+                <h2>Rebirth</h2>
+                <p>We make all garments in our Rebirth collection with at least 70% recycled fibers– because why throw away or waste material we can turn into new products? Over the years, we've launched a few bits and pieces and called it Rebirth, but starting today, Rebirth is a recurring concept.</p>
+                <span>become a c/o Nudie Jeans member!</span>
               </div>
             </a>
           </li>
@@ -212,21 +219,18 @@
             <div class="Sustainability_slider">
               <ul class="swiper-wrapper">
                 <li class="swiper-slide">
-                  <h3>Lorem, ipsum.</h3>
-                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur soluta blanditiis ab quia,
-                    quos nostrum illum velit doloribus quod aperiam?
+                  <h3>Sustainability Report</h3>
+                  <p>For our daily business and sustainability work, we have several policies that serve as a framework and guidance.
                   </p>
                 </li>
                 <li class="swiper-slide">
-                  <h3>Lorem, ipsum.</h3>
-                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur soluta blanditiis ab quia,
-                    quos nostrum illum velit doloribus quod aperiam?
+                  <h3>Social Report</h3>
+                  <p>As a member of FWF we annually report on our performance. In the social report we summarize the previous year and the activities at supplier level. We are transparent about the findings at the social audits and the complaints received at our suppliers.
                   </p>
                 </li>
                 <li class="swiper-slide">
-                  <h3>Lorem, ipsum.</h3>
-                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur soluta blanditiis ab quia,
-                    quos nostrum illum velit doloribus quod aperiam?
+                  <h3>Material Tool</h3>
+                  <p>The Nudie Jeans Material Tool aims to guide our designers and product developers. The Nudie Jeans Material Tool is based on Made-By’s Environmental Benchmark for Fibers and the Higg Materials Sustainability Index (MSI).
                   </p>
                 </li>
               </ul>
@@ -241,8 +245,8 @@
           </div>
           <div class="s_con">
             <div class="text_box">
-              <h3>Lorem, ipsum.</h3>
-              <p>Lorem ipsum dolor sit.</p>
+              <h3>FACTS</h3>
+              <p>Reports & Policies</p>
               <a href="#none">SUBSCRIBE <i class="far fa-envelope"></i></a>
             </div>
           </div>
@@ -255,7 +259,7 @@
         <h2>Journal</h2>
         <ul>
           <li>
-            <a href="#">
+            <a href="#none">
               <div class="pic">
                 <img src="./img/main/journal01.jpg" alt="">
                 <i class="mask_bg"></i>
@@ -267,7 +271,7 @@
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#none">
               <div class="pic">
                 <img src="./img/main/journal02.jpg" alt="">
                 <i class="mask_bg"></i>
@@ -279,7 +283,7 @@
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#none">
               <div class="pic">
                 <img src="./img/main/journal03.jpg" alt="">
                 <i class="mask_bg"></i>
@@ -291,7 +295,7 @@
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#none">
               <div class="pic">
                 <img src="./img/main/journal04.jpg" alt="">
                 <i class="mask_bg"></i>
@@ -303,7 +307,7 @@
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#none">
               <div class="pic">
                 <img src="./img/main/journal05.jpg" alt="">
                 <i class="mask_bg"></i>
@@ -315,7 +319,7 @@
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#none">
               <div class="pic">
                 <img src="./img/main/journal06.jpg" alt="">
                 <i class="mask_bg"></i>
@@ -327,7 +331,7 @@
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#none">
               <div class="pic">
                 <img src="./img/main/journal07.jpg" alt="">
                 <i class="mask_bg"></i>
@@ -339,7 +343,7 @@
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#none">
               <div class="pic">
                 <img src="./img/main/journal08.jpg" alt="">
                 <i class="mask_bg"></i>
@@ -430,7 +434,7 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto explicabo porro aspernatur
               consequatur velit dolores soluta excepturi ratione repudiandae repellendus, et suscipit eum obcaecati sed
               eos omnis provident nemo deleniti!</p>
-            <a href="#none">view more</a>
+            <a href="#none" class="repair_open">view more</a>
           </div>
         </div>
         <!--// top_box -->
@@ -588,31 +592,31 @@
     <li class="on">
       <span>Main</span>
     </li>
-    <li> 
+    <li>
       <span>New Arrivals</span>
     </li>
-    <li> 
+    <li>
       <span>About</span>
     </li>
-    <li> 
+    <li>
       <span>SusTainability</span>
     </li>
-    <li> 
+    <li>
       <span>Journal</span>
     </li>
-    <li> 
+    <li>
       <span>Bake Your Own</span>
     </li>
-    <li> 
+    <li>
       <span>Repair</span>
     </li>
-    <li> 
+    <li>
       <span>Island</span>
     </li>
-    <li> 
+    <li>
       <span>Sns</span>
     </li>
-   
+
   </ul>
   <footer id="footer">
     <div class="inner">
@@ -635,7 +639,7 @@
         Privacy, Cookie Policy & Cookie Settings</p>
   </footer>
 
-  <!--popup  -->
+  <!--cookie popup  -->
   <div id="popup">
     <div class="cont">
       <div class="pic">
@@ -648,12 +652,42 @@
     </div>
     <div class="wrap">
       <div class="checks">
-        <input type="checkbox"  id="ck" value="game">
+        <input type="checkbox" id="ck" value="game">
         <label for="ck">Let's stop watching today</label>
       </div>
     </div>
     <a href="#" class="close_btn">close</a>
   </div>
+
+  <!--repair popup  -->
+  <div id="repairPopup">
+    <div class="top"></div>
+    <div class="inner">
+      <div>
+      <div class="pic">
+      <img src="img/main/repair_pop.jpg" >
+      <div class="cont">
+        <h2>Repair Shops</h2>
+        <p>We don’t call our stores ‘Repair Shops’ for nothing. Just as important as selling jeans it is for us to repair what we once sold. Wash your jeans and hand them in at your closest Nudie Jeans Repair Shop. When they’re done you have a new version of your old favourite. Making your mark on your things adds value to them and make them worth caring for.</p>
+      </div>
+    </div>
+    </div>
+    <div>
+      <div class="pic">
+      <img src="img/main/repair_pop02.jpg" >
+      <div class="cont">
+        <h2>Repair Partners</h2>
+        <p>If you feel the moon is closer than any of our Repair Shops, you can look for our Repair Partners. They’re fully equipped and handle your repairs as if you had left your jeans at our shop. Of course they do it for free as well.</p>
+      </div>
+    </div>
+    </div>
+    <a href="#" class="repair_close">close</a>
+   
+    </div>
+    
+  </div>
+
+
 </body>
 
 </html>
