--- a/media.html
+++ b/media.html
@@ -44,7 +44,7 @@
           <li><a href="gallery.html">GALLERY</a></li>
           <li><a href="location.html">LOCATION</a></li>
         </ul>
-        <a href="#none" class="close"><span>메뉴호출</span></a>
+        <a href="#none" class="close"><span>메뉴닫음</span></a>
       </nav>
     </div>
   </header>
@@ -61,11 +61,8 @@
     <div class="media_info">
       <div class="inner">
         <div class="text_box">
-          <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. </h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, sit quaerat. Quasi veniam placeat
-            culpa eveniet fugit perspiciatis ipsum? Voluptatibus consequatur sapiente nam facilis illo minus expedita,
-            delectus fugiat rerum! Quam dolor aut laboriosam voluptatibus! Incidunt nostrum provident magnam repudiandae
-            veritatis, libero autem est omnis mollitia. Quam expedita sit amet.</p>
+          <h2>We want your jeans back! </h2>
+          <p>The majority becomes patching material used for repair. We also use the fabric from old Nudie Jeans to make new products, such as bucket hats. And some traded in jeans we sell second-hand in our Re-use program in-store and online.</p>
         </div>
         <div class="info_list">
           <article class="info1">
