--- a/about.html
+++ b/about.html
@@ -6,9 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ABOUT</title>
-  <script src="https://kit.fontawesome.com/16312fa746.js" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+  <!-- style -->
   <link rel="stylesheet" href="css/style.css">
+
+  <!-- js -->
+  <script src="https://kit.fontawesome.com/16312fa746.js" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
   <script src="js/sub.js" defer></script>
   <script src="js/about.js" defer></script>
 </head>
@@ -72,7 +77,7 @@
       <div class="is_about">
         <h2>Is About</h2>
         <ul>
-          <li>
+          <li class="con1">
             <a href="#">
               <div class="pic">
                 <img src="img/about/about_list01.jpg" alt="">
@@ -84,7 +89,7 @@
               </div>
             </a>
           </li>
-          <li>
+          <li class="con2">
             <a href="#">
               <div class="pic">
                 <img src="img/about/about_list02.jpg" alt="">
@@ -97,7 +102,7 @@
               </div>
             </a>
           </li>
-          <li>
+          <li class="con3">
             <a href="#">
               <div class="pic">
                 <img src="img/about/about_list03.jpg" alt="">
